jekins/jekins-k8s/jenkins-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: devops  # 指定 Namespace 为 devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins-sa  # 使用的 ServiceAccount
      containers:
        - name: jenkins
          image: your-jenkins-image:tag
          ports:
            - containerPort: 8080
            - containerPort: 50000
          volumeMounts:
            - name: jenkins-data
              mountPath: /var/jenkins_home
          livenessProbe:
            httpGet:
              path: /login  # 健康检查路径，请根据实际情况调整
              port: 8080
            initialDelaySeconds: 180  # 启动后等待时间
            periodSeconds: 10  # 定期检查间隔
          readinessProbe:
            httpGet:
              path: /login  # 健康检查路径，请根据实际情况调整
              port: 8080
            initialDelaySeconds: 30  # 启动后等待时间
            periodSeconds: 5  # 定期检查间隔
      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
            claimName: jenkins-pvc
