jekins/jekins-k8s/jenkins-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: devops  # 指定 Namespace 为 devops
spec:
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
    - protocol: TCP
      port: 50000
      targetPort: 50000
